--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "/media/Backup/Active_Project/calculator_flutter/linux"
+    "cmake.sourceDirectory": "/media/joel/Unrecoverable Data/Active_Project/calculator_flutter/linux"
 }
